--- a/examples/org.eclipse.equinox.p2.examples.rcp.prestartupdate/pom.xml
+++ b/examples/org.eclipse.equinox.p2.examples.rcp.prestartupdate/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.eclipse.equinox.p2</groupId>
     <artifactId>org.eclipse.equinox.p2.examples</artifactId>
-    <version>4.25.0-SNAPSHOT</version>
+    <version>${releaseVersion}${qualifier}</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>org.eclipse.equinox.p2.examples.rcp.prestartupdate</artifactId>
