--- a/.github/workflows/prepareRelease.yml
+++ b/.github/workflows/prepareRelease.yml
@@ -9,17 +9,26 @@ on:
 jobs:
   prepare:
     runs-on: ubuntu-latest
-  #  if: contains(github.event.milestone.description, 'Release')
+#    if: contains(github.event.milestone.description, 'Release')
+    permissions:
+      pull-requests: write
     steps:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0 # required for jgit timestamp provider to work
-        ref: master
+        ref: master    # as not triggered by a commit we need to give explicit reference here
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - run: mvn -Pbuild-individual-bundles org.eclipse.tycho:tycho-versions-plugin:4.0.0-SNAPSHOT:set-property --non-recursive -Dproperties=releaseVersion -DnewReleaseVersion=${{ github.event.milestone.title }}
-    - run: mvn -Pbuild-individual-bundles org.eclipse.tycho:tycho-versions-plugin:4.0.0-SNAPSHOT:set-parent-version --non-recursive -DewParentVersion=${{ github.event.milestone.title }}-SNAPSHOT
+    - run: mvn -Pbuild-individual-bundles -ntp org.eclipse.tycho:tycho-versions-plugin:4.0.0-SNAPSHOT:set-property --non-recursive -Dproperties=releaseVersion -DnewReleaseVersion=${{ github.event.milestone.title }}
+#    - run: mvn -Pbuild-individual-bundles -ntp org.eclipse.tycho:tycho-versions-plugin:4.0.0-SNAPSHOT:set-parent-version --non-recursive -DewParentVersion=${{ github.event.milestone.title }}-SNAPSHOT
+    - name: Create Pull Request for Release ${{ github.event.milestone.title }}
+      uses: peter-evans/create-pull-request@v4
+      with:
+        commit-message: Prepare Release ${{ github.event.milestone.title }}
+        branch: prepare-${{ github.event.milestone.title }}
+        title: Prepare Release ${{ github.event.milestone.title }}
+        body: A new Release Milstone was created, please review the changes and merge if appropriate.
