--- a/.github/workflows/prepareRelease.yml
+++ b/.github/workflows/prepareRelease.yml
@@ -12,6 +12,7 @@ jobs:
 #    if: contains(github.event.milestone.description, 'Release')
     permissions:
       pull-requests: write
+      contents: write
     steps:
     - uses: actions/checkout@v3
       with:
