--- a/.github/workflows/prepareRelease.yml
+++ b/.github/workflows/prepareRelease.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Create Pull Request for Release ${{ github.event.milestone.title }}
       uses: peter-evans/create-pull-request@v4
       with:
+        token: PR_PAT # need to use a PAT due to https://github.com/peter-evans/create-pull-request/issues/48
         commit-message: Prepare Release ${{ github.event.milestone.title }}
         branch: prepare-${{ github.event.milestone.title }}
         title: Prepare Release ${{ github.event.milestone.title }}
