--- a/bundles/org.eclipse.equinox.p2.artifact.repository/plugin.xml
+++ b/bundles/org.eclipse.equinox.p2.artifact.repository/plugin.xml
@@ -74,4 +74,13 @@
 			point="org.eclipse.equinox.p2.artifact.repository.processingSteps">
 		<step class="org.eclipse.equinox.internal.p2.artifact.processors.pgp.PGPSignatureVerifier"/>
    </extension>
+ <extension
+       point="org.eclipse.equinox.p2.artifact.repository.artifactRepositories">
+    <factory
+          class="org.eclipse.equinox.internal.p2.artifact.repository.maven.LocalMavenArtifactRepositoryFactory">
+    </factory>
+    <filter
+          suffix="resolver-status.properties">
+    </filter>
+ </extension>
 </plugin>
